--- a/108506036 cssHW.html
+++ b/108506036 cssHW.html
@@ -29,7 +29,7 @@
 	  				<li><a href="http://www.pjhs.tyc.edu.tw/PJHS_Page/PJHS/index.aspx?FL_Num=F023&MC_id=1&FN_id=158" style="color: lightblue">平鎮高中</a></li>
 	  			</ul>
 	  		</td>
-	  		<th style="font-size: 500%" width="800"><center><a href="https://lullabynagi.github.io/templatemo_530_mini_profile/">作業連結</a></center></th>
+	  		<th style="font-size: 500%" width="800"><center><a href="https://lullabynagi.github.io/templatemo_530_mini_profile/index.html">作業連結</a></center></th>
 	  		
 
 	  	</tr>
